# AlgorithmsAndDataStructures_Course2025

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build_check.yml  test_check.yml
assets/: help.txt  system.conf
include/: artefactoUnico.hpp  enemigos.hpp  engine.hpp  engineData.hpp  entidadGenerica.hpp  gameSerializer.hpp  mercaderAgua.hpp  personajes.hpp  randomEventGenerator.hpp  refugiado.hpp  refugio.hpp  saqueadores.hpp  wrapperVector.hpp
include/characters/: artefactoUnico.hpp  asaltante.hpp  caravan.hpp  enclave.hpp  entidadGenerica.hpp  ghoul.hpp  hermanoDeAcero.hpp  mercader.hpp  mercaderAgua.hpp  mutantes.hpp  refugiado.hpp  refugio.hpp  saqueador.hpp
include/dataStructures/: list.hpp  wrapperVector.hpp
src/: engine.cpp  gameSerializer.cpp  ghoul.cpp  hermanoDeAcero.cpp  main.cpp  mercaderAgua.cpp  refugiado.cpp  refugio.cpp  saqueador.cpp  saqueadores.cpp
tests/unit/: CMakeLists.txt  wrapperVector_test.cpp
